# tab

./: .gitignore  AGENTS.md  README.md  THIRD-PARTY-NOTICES.md  install.ps1  install.sh  intent.md  release.sh
.github/workflows/: build-and-release.yml  ci.yml  release-cli.yml  release-daemon.yml  release.yml
DOCS/: ARCHITECTURE.md  PROTOCOL_SIMPLE.md  README.md  architecture.md  code.md  ext-architecture.md  intent.txt  protocol.md  workflow.md  ws-protocol-schema.json
cli/: Cargo.toml  release.sh
cli/src/: cli.rs  config.rs  daemon.rs  error.rs  ipc.rs  lib.rs  main.rs  output.rs  session.rs  types.rs
cli/src/commands/: click.rs  eval.rs  history.rs  mod.rs  navigate.rs  scroll.rs  snapshot.rs  tab.rs  type_cmd.rs  utils.rs
cli/src/commands/history/: back.rs  forward.rs  mod.rs
cli/src/commands/plugins/: daemon.rs
cli/src/commands/tab/: close.rs  list.rs  mod.rs  new.rs  switch.rs
cli/src/utils/: files.rs  mod.rs  plugins.rs  tls_client.rs
daemon/: native-messaging-manifest.json  package-lock.json  package.json  release.sh  vitest.config.ts
daemon/scripts/: tab-daemon-native-host.sh
daemon/src/: browser-manager.ts  command-router.ts  daemon.ts  index.ts  ipc-server.ts  native-messaging-handler.ts  session-manager.ts  types.ts  validation.ts  ws-server.ts
daemon/src/utils/: signal-handler.ts
daemon/tests/e2e/: daemon-flow.test.ts
daemon/tests/integration/: ipc-server.test.ts  ws-server.test.ts
daemon/tests/unit/: session-manager.test.ts
daemon/tests/utils/: index.ts  ipc-client.ts  mock-extension.ts  test-config.ts
extension/: esbuild.config.js  manifest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
extension/src/: index.ts
extension/src/background/: endpoint-manager.ts  index.ts  native-messaging.ts  router.ts  storage.ts  tabs.ts  websocket.ts
extension/src/content/: executor.ts  index.ts
extension/src/popup/: index.ts  popup.css  popup.html
extension/src/shared/: messages.ts  types.ts
extension/tests/: actions.test.ts  router.test.ts  setup.ts  snapshot.test.ts  tabs.test.ts  websocket.test.ts
extension/tests/e2e/: extension.spec.ts  tabs.spec.ts
skills/: tab-browser-automation.md
(+23 files in other folders)
