[package]
name = "browser"
version = "0.1.10"
edition = "2021"
description = "Browser automation CLI - control a real browser from the command line"
authors = ["Stakpak Team"]
license = "MIT"
repository = "https://github.com/stakpak/tab"

[[bin]]
name = "browser"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
