[package]
name = "browser"
version = "0.2.2"
edition = "2024"
description = "Browser automation CLI - control a real browser from the command line"
authors = ["Stakpak Team"]
license = "MIT"
repository = "https://github.com/stakpak/tab"

[[bin]]
name = "browser"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tar = "0.4.44"
zip = "8.1.0"
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["json"] }
rustls-platform-verifier = "0.6.2"
rustls = { version = "0.23.36", features = ["ring"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
